--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 	<meta name="viewport" content="width-device-width, initial- scale=1">
 
 	<title>Trivia Game</title>
-	<link href="https://fonts.googleapis.com/css?family=Barrio|Bungee+Inline|Faster+One|Londrina+Outline|Monofett|Titan+One|Vast+Shadow" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Faster+One" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
 	<!--Trivia Game made with jQuery and Bootstrap -->	
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -27,7 +28,7 @@
 					<div class="content-container">
 						<h1>Movie Trivia</h1>
 						<div id="welcome">
-							<p>some text about the game here</p>
+							<p>try and answer as many question in the time allowed</p>
 							<div id="results" class="hide"></div>
 							<button id="startGame" class="textBox">Start</button>
 						</div>
